--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <link rel="stylesheet" href="css/Style.css">
   <link rel="stylesheet" href="css/Style2.css">
   <link rel="stylesheet" href="css/Style3.css">
+  <link rel="stylesheet" href="css/Style4.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BYNKER</title>
+  <title>CRYSTAL</title>
 </head>
-
 <body>
   <nav class="form-inline" id="navmain" class="pagerow">
     <ul id="navul" class="nav">
       <li id="nav-start" class="right"><a class="active" href="index.html">Start</a></li>
       <li id="nav-info" class="right"><a href="info.html">info</a></li>
       <li id="nav-media" class="right"><a href="media.html">Medier</a></li>
+      <li id="nav-pictures" class="right"><a href="pictures.html">Pictures</a></li>
       <li id="nav-bynker" class="right"><a href="fun.html">BYNKER</a></li>
     </ul>
   </nav>
@@ -41,16 +42,25 @@
     </div>
   </div>
   <div class="helags-img">
-  <img src="pictures/helags.JPG" alt="HELAGS" style="width:100%;">
+  <img id="helags" src="pictures/helags.JPG" alt="HELAGS" style="width:100%;">
   <div class="helags-text">
     <h1>Helags</h1>
     <p>Bild från 2016</p>
   </div>
 </div>
-  <footer id="footer">
-    <p id="footer-text">Layout made by Alexander Lusth</p>
-  </footer>
-  <script src="javaScripts/startscript.js" charset="utf-8"></script>
-</body>
 
+
+  <div id="fast-info" style="height:5px;background-color:#A0A0A0;font-size:20px;"></div>
+
+  <div class="parallax2">
+    <h1 id="parallax2header">Be Happy!</h1>
+  </div>
+
+  <div id="fast-info" style="height:5px;background-color:white;font-size:20px;"></div>
+
+<div class="parallax3"></div>
+<footer id="footer">
+  <p id="footer-text">Layout made by Alexander Lusth</p>
+</footer>
+</body>
 </html>
