--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>info</title>
+  <title>CRYSTAL</title>
 
 </head>
 
@@ -18,6 +18,7 @@
       <li class="right"><a href="index.html">Start</a></li>
       <li class="right"><a class="active" href="info.html">Info</a></li>
       <li class="right"><a href="media.html">Medier</a></li>
+      <li class="right"><a href="pictures.html">Pictures</a></li>
       <li class="right"><a href="fun.html">BYNKER</a></li>
     </ul>
   </nav>
