--- a/media.html
+++ b/media.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Media</title>
+  <title>CRYSTAL</title>
 
 </head>
 
@@ -18,6 +18,7 @@
       <li class="right"><a href="index.html">Start</a></li>
       <li class="right"><a href="info.html">Info</a></li>
       <li class="right"><a class="active" href="media.html">Medier</a></li>
+      <li class="right"><a href="pictures.html">Pictures</a></li>
       <li class="right"><a href="fun.html">BYNKER</a></li>
     </ul>
 
@@ -37,7 +38,7 @@
   <div id="rotation">
     rotation right?
   </div>
-  <div id="site-version">site-version:2.2</div>
+  <div id="site-version">site-version:2.4</div>
   <div id="latest-vid">
     <iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
   <button id="date-btn" onclick="getDate()">DATUM</button>
