--- a/pictures.html
+++ b/pictures.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
   <head>
-    <link rel="stylesheet" href="css/pictures.css">
     <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/pictures.css">
     <link rel="stylesheet" href="css/Style2.css">
     <link rel="stylesheet" href="css/Style3.css">
     <link rel="stylesheet" href="css/Style4.css">
@@ -22,20 +22,20 @@
         <li id="nav-bynker" class="right"><a href="fun.html">BYNKER</a></li>
       </ul>
     </nav>
-    <div id="fast-info" style="height:5px;background-color:#A0A0A0;font-size:20px;"></div>
-
-    <div class="picture">
-      <h1 id="parallax2header">Pictures</h1>
-    </div>
-
-    <div id="fast-info" style="height:5px;background-color:white;font-size:20px;"></div>
-
-  <div class="picture2"></div>
-
-<div id="fast-info" style="height:5px;background-color:white;font-size:20px;"></div>
-
-<div class="picture3"></div>
-
+    <div class="image-text">
+<img id="mepic" src="pictures/me.jpg" alt="Alexander">
+<div class="centered">ALEXANDER</div>
+</div>
+<img class="image-middle" src="pictures/sunset.jpg" alt="sunset">
+<img class="image-middle" src="pictures/water.jpg" alt="water">
+<img class="image-middle" src="pictures/berg.jpg" alt="hoverberg">
+<img class="image-middle" src="pictures/helags.jpg" alt="helags">
+<img class="image-middle" src="pictures/berg-winter.jpg" alt="helags">
+<img class="image-middle" src="pictures/friends.jpg" alt="helags">
+<img class="image-middle" src="pictures/city-night.jpg" alt="helags">
+<img class="image-middle" src="pictures/berg-summer.jpg" alt="helags">
+<img class="image-middle" src="pictures/snowmobile.jpg" alt="helags">
+<img class="image-middle" src="pictures/city-day.jpg" alt="helags">
   <footer id="footer">
     <p id="footer-text">Layout made by Alexander Lusth</p>
   </footer>
