added a countdownscript. proud of ui! get better ui!

--- a/media.html
+++ b/media.html
@@ -27,7 +27,7 @@
 
   </div>
   <h1 id="rolig">ROLIGARE DELEN</h1>
-  <p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden.</p>
+  <p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden. detta är även sidan som jag testar javascript och annat på.</p>
   <a href="https://youtube.com/alexanderwake" type="button" class="button"><img id="youtube" src="pictures/youtube.png" alt=""> </a>
   <p>Min youtube kanal.</p>
   <a href="https://steamcommunity.com/profiles/76561198117467646" type="button" class="button"> <img id="steam" src="pictures/steam.jpg" alt=""> </a>
@@ -46,6 +46,7 @@
   <button id="random-btn" onclick="getRandom()">BYNKER</button>
   <p id="random-numb"></p>
   <img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
+  <p id="countdown" ></p>
   <footer id="footer">
     <div class="row">
       <div class="column1-3">
@@ -61,6 +62,9 @@
   <script src="javaScripts/random.js"></script>
   <script src="javaScripts/datetime.js"></script>
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
+  <script src="javaScripts/countdown.js"></script>
+
+  </script>
 </body>
 
 </html>
