added alert to media

--- a/media.html
+++ b/media.html
@@ -11,7 +11,7 @@
   <title>CRYSTAL</title>
 
 </head>
-
+  <script src="javaScripts/alert-info.js"></script>
 <body>
   <nav id="navmain">
     <ul id="navul" class="nav">
@@ -64,7 +64,7 @@
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
   <script src="javaScripts/countdown.js"></script>
 
-  </script>
+
 </body>
 
 </html>
