added kys tutorial. just for fun okey??

--- a/media.html
+++ b/media.html
@@ -48,6 +48,10 @@
   <p id="random-numb"></p>
   <img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
   <p id="countdown" ></p>
+  <button onclick="typeWriter()">Dont... just dont click</button>
+  <div class="jstext">
+    <p id="jstext" ></p>
+  </div>
   <footer id="footer">
     <div class="row">
       <div class="column1-3">
@@ -60,6 +64,7 @@
       </div>
     </div>
   </footer>
+  <script src="javaScripts/whriteScript.js"></script>
   <script src="javaScripts/random.js"></script>
   <script src="javaScripts/datetime.js"></script>
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
