--- a/pictures.html
+++ b/pictures.html
@@ -38,8 +38,17 @@
   <img class="image-middle" src="pictures/snowmobile.jpg" alt="helags">
   <img class="image-middle" src="pictures/city-day.jpg" alt="helags">
   <footer id="footer">
-    <p id="footer-text">Layout made by Alexander Lusth</p>
+    <div class="row">
+      <div class="column1-3">
+        <button id="start-btn" onclick="getStart()">Back to Start</button>
+      </div>
+      <div class="column1-3" id="footer-div">
+        <p id="footer-text">Layout made by Alexander Lusth</p>
+      </div>
+      <div class="column1-3">
+      </div>
+    </div>
   </footer>
 </body>
-
+<script src="javaScripts/startscript.js" charset="utf-8"></script>
 </html>
