added coments to scripts. fixing jpg issue

--- a/media.html
+++ b/media.html
@@ -48,7 +48,7 @@
   <p id="random-numb"></p>
   <img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
   <p id="countdown" ></p>
-  <button onclick="typeWriter()">Dont... just dont click</button>
+  <button onclick="typeWriter()">Dont... just dont click retard</button>
   <div class="jstext">
     <p id="jstext" ></p>
   </div>
