changed avatar pic. added bdo class

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1 id="parallax2header">Be Happy!</h1>
   </div>
 
-  <div id="fast-info" style="height:5px;background-color:white;font-size:20px;"></div>
+  <div id="fast-info" style="height:5px;background-color:orange;font-size:20px;"></div>
 
   <div class="parallax3"></div>
   <footer id="footer">
