--- a/media.html
+++ b/media.html
@@ -42,6 +42,11 @@
   <div id="site-version">site-version:2.5</div>
   <div id="latest-vid">
     <iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <h1 id="bdo_class">Black desert online class</h1>
+    <video width="320" height="240" controls>
+  <source src="videos/valkyrie.mp4" type="video/mp4">
+  <source src="videos/movie.ogg" type="video/ogg">
+</video>
   <button id="date-btn" onclick="getDate()">DATUM</button>
   <p id="datumet"></p>
   <button id="random-btn" onclick="getRandom()">BYNKER</button>
@@ -70,6 +75,7 @@
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
   <script src="javaScripts/countdown.js"></script>
 
+</video>
 
 </body>
 
