i tought i fixed that

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="helags-img">
-    <img id="helags" src="pictures/helags.JPG" alt="HELAGS" style="width:100%;">
+    <img id="helags" src="pictures/helags.jpg" alt="HELAGS" style="width:100%;">
     <div class="helags-text">
       <h1>Helags</h1>
       <p>Bild från 2016</p>
