--- a/info.html
+++ b/info.html
@@ -17,9 +17,9 @@
     <ul id="navul" class="nav">
       <li class="right"><a href="index.html">Start</a></li>
       <li class="right"><a class="active" href="info.html">Info</a></li>
-      //<li class="right"><a href="media.html">Medier</a></li>
+      //<.li class="right"><.a href="media.html">Medier</a></li>
       <li class="right"><a href="pictures.html">Pictures</a></li>
-      //<li class="right"><a href="fun.html">BYNKER</a></li>
+      //<.li class="right"><.a href="fun.html">BYNKER</a></li>
     </ul>
   </nav>
   <div id="row">
