--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li id="nav-info" class="right"><a href="info.html">info</a></li>
       <.li id="nav-media" class="right"><.a href="media.html">Medier</a></li>
       <li id="nav-pictures" class="right"><a href="pictures.html">Pictures</a></li>
-      //<.li id="nav-bynker" class="right"><.a href="fun.html">BYNKER</a></li>
+      <.li id="nav-bynker" class="right"><.a href="fun.html">BYNKER</a></li>
       <li id="nav-acc" class="right"><a href="account.html">Account</a></li>
     </ul>
   </nav>
